# Obsidian

./: .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitmodules  .prettierrc  CHANGELOG.md  Obsidian.sln  README.md  biome.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md
.github/workflows/: ci.yml  dotnet-core-desktop.yml  dotnet-core.yml
.husky/: commit-msg
.nuke/: build.schema.json  parameters.json
Localization/: French.locale.json  German.locale.json  Slovak.locale.json  Spanish.locale.json
Localizations/: ChineseSimplified.locale.json  English.locale.json  German.locale.json  Hungarian.locale.json  Korean.locale.json  Polish.locale.json  PortugueseBrazil.locale.json  Russian.locale.json  Spanish.locale.json  Swedish.locale.json  Turkish.locale.json  Ukrainian.locale.json
MaterialDesignUtilities/: MaterialDesignUtilities.csproj  Modifier.cs  ModifierBase.cs  ModifierCollection.cs  TreeHelpers.cs
Obsidian/: App.config  App.manifest  App.razor  App.xaml  App.xaml.cs  AppTheme.cs  MainWindow.xaml  MainWindow.xaml.cs  Obsidian.csproj  Program.cs  _Imports.razor  packages.config
Obsidian.Tests/: CounterCSharpTests.cs  CounterRazorTests.razor  Obsidian.Tests.csproj
Obsidian/BabylonJs/: Babylon.cs  BabylonBone.cs
Obsidian/Data/: Config.cs  CustomIcons.cs
Obsidian/MVVM/: ILocalizable.cs  PropertyNotifier.cs
Obsidian/Pages/: ExplorerPage.razor  ExplorerPage.razor.cs  Index.razor
Obsidian/Preview/: Handler.cs  MouseHandler.cs
Obsidian/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Obsidian/Resources/: English.locale.json
Obsidian/Services/: DiscordRichPresence.cs  HashtableService.cs
Obsidian/Shared/: DirectoryInput.razor  HashtableProvider.razor.cs  MainLayout.razor  MainLayout.razor.cs  NavMenu.razor  SettingsDialog.razor  TreeView.razor  TreeView.razor.cs  TreeWadItem.razor  TreeWadItem.razor.cs  TreeWadItem.razor.css  WadExplorer.razor  WadExplorer.razor.cs  WadExplorerToolbar.razor  WadExplorerToolbar.razor.cs  WadFileImagePreview.razor  WadFileImagePreview.razor.cs  WadFileTextPreview.razor  WadFileTextPreview.razor.css  WadFileViewport.razor  WadFileViewport.razor.cs  WadFilter.razor
Obsidian/ThreeJs/: Three.cs  ThreeAnimation.cs  ThreeBone.cs
Obsidian/Utilities/: Config.cs  DialogHelper.cs  DiscordRpcContext.cs  FileConversionHelper.cs  Hashtable.cs  HashtableGenerator.cs  Localization.cs  ObservableCollectionSort.cs  Pathing.cs
Obsidian/Utils/: BinUtils.cs  Config.cs  ConfigUtilities.cs  FileDialogUtils.cs  ImageUtils.cs  Logging.cs  SkinnedMeshUtils.cs  SnackbarUtils.cs  WADHashGenerator.cs  WadPreviewUtils.cs  WadUtils.cs
Obsidian/ValueConverters/: HexStringValueConverter.cs  SizeValueConverter.cs  WadNameConverter.cs
Obsidian/Windows/: AboutWindow.xaml  AboutWindow.xaml.cs  FileAddWindow.xaml  FileAddWindow.xaml.cs  FileRedirectionAddWindow.xaml  FileRedirectionAddWindow.xaml.cs
Obsidian/wwwroot/: index.html  photino.js  prism.js
Photino.Blazor/: Photino - Backup.Blazor.csproj  Photino.Blazor.csproj  Photino.Blazor.nuspec  PhotinoBlazorApp.cs  PhotinoBlazorAppBuilder.cs  PhotinoBlazorAppConfiguration.cs  PhotinoDispatcher.cs  PhotinoHttpHandler.cs  PhotinoSyncrhronizationContext.cs  PhotinoWebViewManager.cs  PhotinoWindowRootComponents.cs  ServiceCollectionExtensions.cs
Photino.Blazor/Utils/: SynchronousTaskScheduler.cs
src/: i18next.d.ts  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  settings.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  paths.rs
src-tauri/src/api/: error.rs  mod.rs
src-tauri/src/api/actions/: commands.rs  mod.rs
src-tauri/src/api/fs/: commands.rs  mod.rs
src-tauri/src/api/game_explorer/: commands.rs  mod.rs
src-tauri/src/api/hashtable/: commands.rs  mod.rs
src-tauri/src/api/settings/: commands.rs  mod.rs
src-tauri/src/api/wad/: commands.rs  mod.rs
src-tauri/src/api/wad/commands/: extract_wad_chunks.rs  extract_wad_items.rs  get_chunk_preview_types.rs  get_image_bytes.rs  get_image_preview_url.rs  search_wad.rs
src-tauri/src/core/: league_file.rs  mod.rs  wad_hashtable.rs
src-tauri/src/core/wad/: error.rs  extractor.rs  mod.rs
src-tauri/src/core/wad/tree/: item.rs  mod.rs  utils.rs
src-tauri/src/state/: action_progresses.rs  actions.rs  game_explorer.rs  http_client.rs  mod.rs  mounted_wads.rs  settings.rs  wad_hashtable.rs
src-tauri/src/utils/: actions.rs  fs.rs  http.rs  log.rs  mod.rs  serde.rs
src/components/: App.test.tsx  App.tsx  index.ts  skeleton.tsx
src/hooks/: index.ts  useFileDrop.ts
src/i18n/: index.ts
src/lib/: i18next.ts  i18next.tsx  query.ts  query.tsx  router.tsx
src/routes/: ComponentTest.tsx  Explorer.tsx  MountedWads.tsx  Wad.tsx  (+5 more)
(+259 files in other folders)
