[package]
name = "obsidian"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
    "dialog-all",
    "shell-open",
    "dialog",
    "http-api",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4.3"
thiserror = "1.0.49"
num_enum = "0.7.0"
flate2 = "1.0"
zstd = "0.12.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
memchr = "2.6.4"
uuid = { version = "1.5.0", features = ['serde'] }
xxhash-rust = { version = "0.8.7", features = ["xxh3", "xxh64"] }
indexmap = "2.0.2"
itertools = "0.11.0"
parking_lot = { version = "0.12.1", features = ["send_guard"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
octocrab = "0.32.0"
reqwest = "0.11.22"
futures-util = "0.3.29"
walkdir = "2.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
