[package]
name = "obsidian"
version = "6.0.0"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [
    "clipboard-all",
    "dialog-all",
    "shell-open",
    "dialog",
    "http-api",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4.3"
thiserror = "1.0.49"
num_enum = "0.7.0"
flate2 = "1.0"
zstd = "0.12.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
memchr = "2.6.4"
uuid = { version = "1.5.0", features = ['serde'] }
xxhash-rust = { version = "0.8.7", features = ["xxh3", "xxh64"] }
indexmap = "2.0.2"
itertools = "0.11.0"
parking_lot = { version = "0.12.1", features = ["send_guard"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
octocrab = "0.32.0"
reqwest = "0.11.22"
futures-util = "0.3.29"
walkdir = "2.4.0"
color-eyre = "0.6.2"
open = "5.0.1"
chrono = { version = "0.4.31", features = ["std", "clock"] }
tracing-appender = "0.2.3"
lazy_static = "1.4.0"
fst = { version = "0.4.7", features = ['levenshtein'] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
